# AmiConnect_Prototype

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
data/demo/: medication_schedule.json
data/processed/: valid.jsonl
demo/: PRODUCTION_PLAN.md  VIDEO_STORYBOARD.md  mvp_runner_dongu.py  mvp_runner_prugio.py  video_demo_runner.py
demo/assets/: README.md
docs/: MVP_PIPELINE.md
models/tlm/kominilm-finetuned/: config.json  label_mappings.json
scripts/: eval_nlu.py
src/: orchestrator.py  schema.py
src/audio/: microphone.py
src/cloud_llm/: gateway.py  gemini.py
src/data_providers/: __init__.py  medication.py  weather.py
src/executor/: __init__.py
src/router/: router.py
src/stt/: moonshine.py
src/tlm/: infer.py  model.py
src/tts/: __init__.py  melo.py  system.py
