[project]
name = "amiconnect"
version = "0.1.0"
description = "Brand-neutral domain-aware AI smart home hub OS — MVP (Mac)"
requires-python = ">=3.11"

dependencies = [
    # Audio
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "silero-vad>=5.1",

    # STT
    "useful-moonshine-onnx>=20251120",
    "onnxruntime>=1.18",

    # NLU
    "transformers>=4.45.0",
    "torch>=2.2.0",
    "pytorch-crf>=0.7.2",

    # Utils
    "python-dotenv>=1.0.1",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
